# multi_planner_nav

./: .gitignore
Imitation_Learning/: OVERVIEW.md  README.md  USAGE.md  config.py  dataset.py  evaluate.py  inference.py  model.py  planner_configs.py  requirements.txt  run_all_planners.sh  test_model.py  train.py  train_debug.py  train_example.py  train_example.sh  utils.py
dynamics_planner_nav/: CMakeLists.txt  package.xml
dynamics_planner_nav/launch/: gazebo_launch.launch  lu.launch  move_base.launch
dynamics_planner_nav/launch/data/: a.py  b.py
dynamics_planner_nav/params/: base_local_planner_params.yaml  costmap_common_params.yaml
dynamics_planner_nav/params/odom_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
dynamics_planner_nav/rviz/: a.rviz
dynamics_planner_nav/scripts/: build.sh  build_ddp.sh  build_test.sh  run.py  run_ddp.py  run_test.py  sest.sh  test.py  ulity.py
dynamics_planner_nav/src/localPlanners/: DDP.cpp  DDP.hpp  DWAPlanner.cpp  DWAPlanner.hpp  DWA_DDPPlanner.cpp  DWA_DDPPlanner.hpp  MPPIPlanner.cpp  MPPIPlanner.hpp  MPPI_DDPPlanner.cpp  MPPI_DDPPlanner.hpp  Parameters.cpp  TEBPlanner.cpp  TEBPlanner.hpp  TEB_DDPPlanner.cpp  TEB_DDPPlanner.hpp
dynamics_planner_nav/src/programs/: RunMP.cpp  SwitchMP.cpp
dynamics_planner_nav/src/robot/: Jackal.cpp  Jackal.hpp  Jackal_callbacks.cpp  Jackal_callbacks.hpp  Jackal_publishers.cpp  Jackal_publishers.hpp  Jackal_recovery.cpp  Utility.cpp  Utility.hpp
dynamics_planner_nav/src/utils/: Algebra.cpp  Algebra.hpp  AsyncTaskExecutor.hpp  Constants.hpp  PseudoRandom.cpp  PseudoRandom.hpp  Timer.hpp  collision_publisher.cpp
jackal_setup/jackal/jackal_control/: CHANGELOG.rst  package.xml
jackal_setup/jackal/jackal_description/: CHANGELOG.rst  package.xml
jackal_setup/jackal/jackal_msgs/: CHANGELOG.rst  package.xml
jackal_setup/jackal/jackal_navigation/: CHANGELOG.rst  package.xml
jackal_setup/jackal/jackal_tutorials/: CHANGELOG.rst  package.xml
qwen_dpt/data_processing/csv_to_json/: analyze_nav_metric.py  csv_to_json.py  run_csv_to_json.sh  utils.py
qwen_dpt/data_processing/download/: csv_to_pickle.py  json_to_pickle.py  view_pickle.py
qwen_dpt/data_processing/json_utils/: json_cat.py  json_filter_missing.py  json_merge_and_shuffle.py  json_shuffle.py  truncate_json.py
qwen_dpt/data_processing/scripts/: count_actor.py
qwen_dpt/scripts/: qwen2_5_finetune_qwen_a100.slurm
ros_jackal/: Singularityfile.def  requirements.txt  singularity_run.sh
ros_jackal/buffer/ddp/: config.yaml  policy_actor  policy_noise
ros_jackal/buffer/dwa/: config.yaml  policy_actor  policy_noise
ros_jackal/buffer/mppi/: config.yaml  difficulty_map.csv  policy_actor  policy_noise
ros_jackal/buffer/teb/: config.yaml  policy_actor  policy_noise
ros_jackal/envs/: __init__.py  registration.py  wrappers.py
ros_jackal/envs/DDP/: __init__.py  ddp_base_envs.py  ddp_envs.py  jackal_base.py  jackal_laser.py  jackal_parameter.py  parameter_tuning_envs.py  visulation.py
ros_jackal/envs/DWA/: dwa_base_envs.py  parameter_tuning_envs.py
ros_jackal/envs/Eband/: Eband_base_envs.py  parameter_tuning_envs.py
ros_jackal/envs/MPPI/: __init__.py  jackal_base.py  jackal_laser.py  jackal_parameter.py  mppi_base_envs.py  mppi_envs.py  parameter_tuning_envs.py  visulation.py
ros_jackal/envs/Teb/: Teb_base_envs.py  parameter_tuning_envs.py
ros_jackal/envs/sensors/: laser.py
ros_jackal/envs/utils/: DDP_move_base.py  DWA_move_base.py  Eband_move_base.py  Jackal_ros.py  MPPI_move_base.py  TEB_move_base.py  Teb_move_base.py  __init__.py  ddp_move_base.py  (+2 more)
ros_jackal/rlft/: README.md  __init__.py  collector.py  rl.py  train.py  vlm_net.py
ros_jackal/script/: extract_lora_from_checkpoint.py  kill_tmux_force.sh  kill_tmux_sessions.sh
ros_jackal/script_HPC/: README.md  check_service.sh  evaluate_qwen_hopper.py  manual_switch_checkpoint.sh  qwen_controller.py  qwen_server.py  qwen_vlm_controller.slurm  qwen_vlm_server.slurm  recover_checkpoints.py  run_hopper_qwen.slurm  run_test_on_hopper.sh  simple_infer.sh  smoke_test_two_calls_hopper.sh  start_qwen_service_hopper.sh  submit_all_controllers.sh  submit_all_evaluations.sh  submit_all_qwen.sh  submit_single_qwen.sh  switch_checkpoint.sh  test_all_qwen_services.sh  test_checkpoint_inference.sh  test_dynamic_switch.sh  test_single_qwen_service.sh
ros_jackal/td3/: actor_eval.py  collector.py  information_envs.py  tester.py  tester_eval.py  train.py
(+814 files in other folders)
