<?xml version="1.0"?>
<package format="2">
  <name>dynamics_planner_nav</name>
  <version>1.0.0</version>
  <description>Clean navigation package with DDP, MPPI, and DWA planners</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>costmap_2d</depend>
  <depend>teb_local_planner</depend>
  <depend>base_local_planner</depend>
  <depend>eigen</depend>
  <depend>opencv</depend>

  <export>
  </export>
</package>
